--- a/src/App/Components/style.scss
+++ b/src/App/Components/style.scss
@@ -27,9 +27,9 @@ html {
   
   }
   
-  .comma {fill:green;}
-  .text {fill:blue;}
-  .parens {fill:red;}
+  .comma {fill:rgb(15, 192, 15);}
+  .text {fill:rgb(0, 162, 255);}
+  .parens {fill:rgb(255, 60, 0);}
 
   .button {
       cursor: pointer;
